# soroban-trader-skill

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SKILL.md  index.js  index.test.js  institutional.test.js  jest.config.js  package-lock.json  package.json
wasm/: Cargo.toml  README.md  build.sh  version.json
wasm/src/: lib.rs
