[package]
name = "soroban-trader-wasm"
version = "3.0.0"
edition = "2021"
authors = ["Burhanclaw <burhan@example.com>"]
description = "High-performance WASM hot path for Soroban Trader"
license = "MIT"
repository = "https://github.com/kaankacar/soroban-trader-skill"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.87"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1.7", optional = true }

# Stellar/Soroban dependencies
stellar-xdr = { version = "20.0", default-features = false, features = ["std"] }

# Optimization dependencies
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
