[package]
name = "soroban-trader-wasm"
version = "3.1.0"
edition = "2021"
authors = ["Burhanclaw <burhan@example.com>"]
description = "High-performance WASM hot path for Soroban Trader v3.1 - MEV Protection & Flash Loans"
license = "MIT"
repository = "https://github.com/kaankacar/soroban-trader-skill"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
wee_alloc = ["dep:wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.87"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

# Stellar/Soroban dependencies
stellar-xdr = { version = "21.0", default-features = false, features = ["std", "base64"] }

# Optimization dependencies
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
wasm-bindgen-cli = "0.2.87"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[package.metadata.wasm-pack]
# Configuration for wasm-pack builds
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-mutable-globals"]
